--- a/study/crud-user-mvc.ru/www/engine/protected/core/gmvc-core/template/css/style.css
+++ b/study/crud-user-mvc.ru/www/engine/protected/core/gmvc-core/template/css/style.css
@@ -5,13 +5,14 @@ body {
 }
 
 .wrapper {
-    width: 750px;
+    width: 100%;
     margin: 100px auto;
 }
 
 .column1 {
     float: left;
-    width: 30%;
+    width: 20%;
+    margin-left: 10px;
 }
 
 .column1 li {
@@ -24,9 +25,29 @@ body {
 
 .column2 {
     float: right;
-    width: 68%;
+    width: 78%;
 }
 
 h2 {
     margin-top: 0;
+}
+
+.createTable td {
+    width: 10%;
+}
+
+.createTable td * {
+    width: 100%;
+}
+
+.createTable .small {
+    width: 5%;
+}
+
+span.del, span.add {
+    cursor: pointer;
+}
+
+table tr, table td {
+    border: 1px solid;
 }
